Fix/user page issues (#12)
* Fix owned emotes not showing up

* Add a "show more" button

--- a/src/app/user/user-home/user-home.component.scss
+++ b/src/app/user/user-home/user-home.component.scss
@@ -30,3 +30,21 @@
 .user-home {
 	display: block;
 }
+
+.show-more-card {
+	margin: 1em;
+	height: 8em;
+	width: 8em;
+	cursor: pointer;
+	border-style: solid;
+	border-color: white;
+	border-width: 1px;
+	
+	:first-child {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+}
